# homebrew-paramo

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
Formula/: paramo.rb
config/: default.toml
launchd/: com.paramo.blocker.plist  com.undistracted.blocker.plist
locales/: en.toml  es.toml
src/: attempts.rs  blocker.rs  config.rs  doctor.rs  habits.rs  hosts.rs  i18n.rs  install.rs  ipc.rs  journal.rs  launchd.rs  logging.rs  main.rs  paths.rs  preferences.rs  report.rs  scheduler.rs  streak.rs  tui.rs  witness.rs
src/tui/: animations.rs  helpers.rs  input.rs  mod.rs  render.rs  state.rs
