[package]
name = "undistracted"
version = "0.1.0"
edition = "2021"
description = "Bloqueador de distracciones para macOS"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
