[package]
name = "paramo"
version = "0.1.1"
edition = "2021"
description = "Bloqueador de distracciones para macOS con CLI y TUI"
license = "MIT"
repository = "https://github.com/attinto/homebrew-paramo"
homepage = "https://github.com/attinto/homebrew-paramo"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
dirs = "5"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = { path = "vendor/serde_json" }
tempfile = "3"
thiserror = "1"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
